--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -31,5 +31,8 @@ h1 {
 }
 
 .btn {
-  background: rgb(80, 227, 194) !important;
+  background: transparent !important;
+  border-radius: 30px !important;
+  border: 1px solid rgb(80, 227, 194) !important;
+  color: #414042 !important;
 }
