--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -26,6 +26,10 @@ h1 {
   z-index: -1;
 }
 
+form .section::after {
+  background-image: none;
+}
+
 .text-width {
   width: 80%;
 }
@@ -35,4 +39,22 @@ h1 {
   border-radius: 30px !important;
   border: 1px solid rgb(80, 227, 194) !important;
   color: #414042 !important;
+}
+
+select {
+  display: block !important;
+  border: 1px solid #9e9e9e !important;
+  height: 100px !important;
+}
+
+input[type="radio"] {
+  opacity: 1 !important;
+}
+
+.radio label {
+  margin-left: 20px !important;
+}
+
+.radio input {
+  margin-top: 5px;
 }
