--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 960px) {
+  .hero .hero-content {
+    width: 400px !important;
+  }
+}
+
 body {
   color: #414042;
   font-family: "Roboto";
