--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,6 +13,10 @@ h1 {
   text-decoration: none;
 }
 
+strong {
+  font-weight: 700 !important;
+}
+
 .section {
   padding-top: 50px !important;
   padding-bottom: 50px !important;
