update website styles per new mockups

--- a/src/components/CardRender.css
+++ b/src/components/CardRender.css
@@ -1,13 +1,51 @@
-@media only screen and (max-width: 960px) {
-  .card.horizontal {
-    flex-direction: column !important;
-  }
+.card-hero {
+  color: white;
+}
 
+.card-hero h3 {
+  color: white;
+  line-height: 3rem;
+}
+.card-hero p {
+  margin: 0;
+}
+
+.card-hero .card-text {
+  padding: 40px;
+  background-color: #01b37b;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-hero .desktop {
+  display: block;
+}
+
+.card-hero .mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 960px) {
   .card.horizontal .card-image {
     max-width: 100% !important;
   }
 
   .nav-menu a {
     display: block !important;
+  }
+
+  .split-card {
+    flex-direction: column;
+    padding: 0 !important;
+  }
+
+  .card-hero .mobile {
+    display: block;
+  }
+
+  .card-hero .desktop {
+    display: none;
   }
 }
