--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -11,3 +11,22 @@
 .slider .indicators {
   text-align: left !important;
 }
+
+.slick-prev,
+.slick-next {
+  top: 25%;
+}
+
+.slick-prev {
+  top: 25%;
+  left: -35px;
+}
+
+.slick-prev::before,
+.slick-next::before {
+  color: #01b37b;
+}
+
+.slick-track {
+  height: 340px;
+}
