--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -1,49 +1,83 @@
 .hero {
   position: relative;
-  padding-top: 50px;
-  height: 100vh;
-  opacity: 0;
+  width: 100vw;
+  height: 80vh;
+  min-height: 80vh;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 .hero::before {
   position: absolute;
+  background: linear-gradient(
+    356deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(241, 239, 233, 0) 85%
+  );
   content: " ";
-  background-image: url("../images/texture.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100%;
-  height: 400px;
-  left: -30%;
+  height: 60%;
+  left: 0;
   bottom: 0;
-  z-index: -1;
+  opacity: 1;
+  z-index: 2;
 }
 
 .hero .img-container {
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
   padding-bottom: 30px;
-  max-width: 960px;
+  max-width: 100vw;
   margin: auto;
-  height: 80%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
 }
 
 .hero .hero-content {
-  color: white;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
-  width: 600px;
-  text-align: center;
+  content: " ";
+  color: white;
+  bottom: 20%;
+  z-index: 4;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.hero .hero-content h4 {
-  font-weight: 900;
-  font-style: italic;
+.hero .hero-content h1 {
+  font-family: Oswald;
   text-transform: uppercase;
 }
 
-.hero .hero-content p {
+.hero .hero-content h5 {
   font-weight: 400;
+  width: 600px;
+  line-height: 2.3rem;
+}
+
+.hero-btn {
+  background: transparent !important;
+  border-radius: 5px !important;
+  border: 2px solid white !important;
+  margin-top: 10px;
+  font-size: 0.6rem;
+  font-weight: 600;
+  color: white !important;
+}
+
+@media only screen and (max-width: 960px) {
+  .hero .hero-content h5 {
+    font-size: medium;
+    width: 85%;
+    line-height: 1.8rem;
+  }
+
+  .hero .hero-content h1 {
+    font-size: 3rem;
+  }
 }
