--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,35 +1,75 @@
-@media only screen and (max-width: 960px) {
-  .hero .hero-content {
-    width: 330px !important;
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 80% !important;
   }
 }
 
 body {
   color: #414042;
-  font-family: "Roboto";
+  font-family: "Open Sans";
+  font-weight: 300;
+}
+
+a {
+  color: #26a69a !important;
 }
 
 h1 {
   text-decoration: none;
+  font-family: Oswald;
+  text-transform: uppercase;
+}
+
+h5 {
+  font-family: Oswald;
+  text-transform: uppercase;
+  font-weight: 300 !important;
+}
+
+h3 {
+  font-family: Oswald;
+  text-transform: uppercase;
+  color: #26a69a;
 }
 
 .section {
-  padding-top: 50px !important;
-  padding-bottom: 50px !important;
   position: relative;
+  padding-bottom: 50px !important;
 }
 
 .section::after {
   position: absolute;
   content: " ";
-  background-image: url("../images/texture.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
   width: 100%;
   height: 400px;
   left: -30%;
   bottom: 0;
   z-index: -1;
+}
+
+.brand-section {
+  padding-top: 50px !important;
+  padding-bottom: 50px !important;
+  position: relative;
+}
+
+.brand-section:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  content: " ";
+  background-color: #e4f2ef;
+  width: 100vw;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  z-index: -1;
+}
+
+.brand-section .paragraph {
+  width: 100%;
 }
 
 form .section::after {
@@ -42,9 +82,15 @@ form .section::after {
 
 .btn {
   background: transparent !important;
-  border-radius: 30px !important;
-  border: 1px solid rgb(80, 227, 194) !important;
-  color: #414042 !important;
+  border-radius: 5px !important;
+  border: 2px solid #01b37b !important;
+  color: #01b37b !important;
+  font-size: 0.6rem !important;
+  font-weight: 600;
+  height: 30px !important;
+  padding: 5px 15px !important;
+  display: inline !important;
+  line-height: 0 !important;
 }
 
 select {
@@ -63,4 +109,38 @@ input[type="radio"] {
 
 .radio input {
   margin-top: 5px;
+}
+
+@media only screen and (max-width: 960px) {
+  h1 {
+    font-size: 3rem !important;
+  }
+
+  h2 {
+    font-size: 2.5rem !important;
+  }
+
+  h3 {
+    font-size: 2.3rem !important;
+  }
+
+  h4 {
+    font-size: 1.7rem !important;
+  }
+
+  h5 {
+    font-size: medium !important;
+    line-height: 1.4rem;
+  }
+
+  .brand-section {
+    padding-top: 25px !important;
+    padding-bottom: 25px !important;
+    position: relative;
+  }
+
+  .section {
+    position: relative;
+    padding-bottom: 25px !important;
+  }
 }
