--- a/src/components/navMenu.css
+++ b/src/components/navMenu.css
@@ -1,3 +1,26 @@
+.nav-menu {
+  position: relative;
+}
+
+.nav-menu a {
+  margin-left: 20px;
+  opacity: 1;
+  font-size: 0.8rem;
+  color: #414042 !important;
+}
+
+.nav-menu a:hover {
+  color: #01b37b !important;
+}
+
+.nav-menu .btn {
+  color: #01b37b !important;
+}
+
+.translate div > a {
+  color: #01b37b !important;
+}
+
 @media only screen and (max-width: 960px) {
   .nav-container {
     flex-direction: column !important;
@@ -13,18 +36,4 @@
   .translate {
     text-align: left !important;
   }
-}
-
-.nav-menu {
-  position: relative;
-}
-
-.nav-menu a {
-  margin-left: 20px;
-  opacity: 0.5;
-  font-size: 0.8rem;
-}
-
-.nav-menu a:hover {
-  opacity: 1;
 }
