--- a/src/components/navMenu.css
+++ b/src/components/navMenu.css
@@ -21,6 +21,12 @@
   color: #01b37b !important;
 }
 
+@media only screen and (max-width: 1150px) {
+  .nav-menu a {
+    font-size: 10px !important;
+  }
+}
+
 @media only screen and (max-width: 960px) {
   .nav-container {
     flex-direction: column !important;
@@ -35,5 +41,9 @@
 
   .translate {
     text-align: left !important;
+  }
+
+  .nav-menu a {
+    font-size: 10px !important;
   }
 }
