--- a/src/components/CardRender.css
+++ b/src/components/CardRender.css
@@ -17,10 +17,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .card-hero .desktop {
-  display: block;
+  display: "flex";
 }
 
 .card-hero .mobile {
