--- a/src/components/mobileMenu.css
+++ b/src/components/mobileMenu.css
@@ -1,3 +1,69 @@
+@-webkit-keyframes mobileFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes mobileFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-o-keyframes mobileFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes mobileFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes mobileFadeOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes mobileFadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-o-keyframes mobileFadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes mobileFadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .mobile-menu-container {
   display: none;
 }
@@ -5,17 +71,22 @@
 @media only screen and (max-width: 993px) {
   .mobile-menu-container {
     position: absolute;
-    display: flex;
     display: none;
     width: 100vw;
     height: 100vh;
-    background: #01b37b;
-    z-index: 1000;
+    background: darkslategray;
+    z-index: 100;
     position: fixed;
+    top: 0;
+    -webkit-animation: mobileFadeIn 500ms ease-in-out; /* Safari 4+ */
+    -moz-animation: mobileFadeIn 500ms ease-in-out; /* Fx 5+ */
+    -o-animation: mobileFadeIn 500ms ease-in-out; /* Opera 12+ */
+    animation: mobileFadeIn 500ms ease-in-out; /* IE 10+, Fx 29+ */
   }
 
   .mobile-menu-container .container {
     position: relative;
+    width: 80%;
   }
 
   .mobile-menu-container .mobile-exit {
@@ -30,12 +101,14 @@
     justify-content: center;
     height: 100%;
     margin: auto;
+    position: relative;
+    top: 100px;
   }
 
   .mobile-menu-container .nav-menu a {
     color: white !important;
     margin-bottom: 30px;
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
     font-family: Oswald;
     text-transform: uppercase;
     position: relative;
@@ -50,6 +123,7 @@
     position: relative;
     line-height: 10px !important;
     width: 150px;
+    font-size: small !important;
   }
 
   .mobile-menu-container .nav-menu a:after {
