--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -1,6 +1,3 @@
-.slider {
-  max-height: 250px !important;
-}
 .slider .slides {
   background: none !important;
 }
@@ -19,7 +16,7 @@
 
 .slick-prev {
   top: 25%;
-  left: -35px;
+  left: -25px;
 }
 
 .slick-prev::before,
@@ -27,6 +24,6 @@
   color: #01b37b;
 }
 
-.slick-track {
-  height: 340px;
+.slick-list {
+  height: 100%;
 }
