--- a/src/components/mobileMenu.css
+++ b/src/components/mobileMenu.css
@@ -74,7 +74,7 @@
     display: none;
     width: 100vw;
     height: 100vh;
-    background: darkslategray;
+    background: #00353f;
     z-index: 100;
     position: fixed;
     top: 0;
